# gtracr

./: .clang-format  .coveragerc  .gitignore  404.html  CLAUDE.md  README.md  _solver_bench.py  index.html  meson.build  meson.options  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.claude/plans/: AVX512-plan.md
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
architecture/: index.html
benchmarks/: index.html
bfield/: index.html
docs/: architecture.md  benchmarks.md  bfield.md  geomagnetic_cutoffs.md  index.md  solvers.md  trajectory.md
examples/: eval_benchmarks.py  eval_gmcutoff.py  eval_solver_bench.py  eval_solver_comparison.py  eval_trajectory.py  example_benchmarks.ipynb  example_gmcutoff.ipynb
geomagnetic_cutoffs/: index.html
gtracr/: __init__.py  geomagnetic_cutoffs.py  plotting.py  trajectory.py  utils.py
gtracr/lib/: constants.py  igrf_table.py  igrf_utils.py  location.py  magnetic_field.py  particle.py  trajectory_tracer.py
gtracr/lib/gpu/: igrf_table.cpp  igrf_table.hpp
gtracr/lib/include/: BatchGMRC.hpp  MagneticField.hpp  TrajectoryTracer.hpp  igrf.hpp
gtracr/lib/src/: BatchGMRC.cpp  Particle.cpp  TrajectoryTracer.cpp  igrf.cpp  pybind11_wrapper.cpp
gtracr/tests/: meson.build  test_bfield.py  test_numerical_regression.py  test_particle_location.py  test_solvers.py  test_trajectories.py  test_trajectory_coverage.py
license/: index.html
search/: search_index.json
solvers/: index.html
src/cpp/: meson.build
src/cpp/gpu/: igrf_table.cpp
src/cpp/include/: BatchGMRC.hpp  Location.hpp  MagneticField.hpp  Particle.hpp  TrajectoryTracer.hpp  constants.hpp
src/cpp/src/: BatchGMRC.cpp  Location.cpp  igrf.cpp  pybind11_wrapper.cpp
src/gtracr/: __init__.py  _fallback.py  constants.py  geomagnetic_cutoffs.py  location.py  meson.build  particle.py  plotting.py  trajectory.py  utils.py
src/gtracr/bfield/: __init__.py  _utils.py  dipole.py  igrf.py  meson.build  table.py
src/gtracr/data/: benchmark_data.pkl
src/gtracr/scripts/: cof_to_json.py  meson.build
tests/: get_tstvalues.ipynb  regen_golden.py  test_bfield.py  test_bfield_models.py  test_cpp_paths.py  test_fallback_tracer.py  test_gmrc.py  test_numerical_regression.py  test_particle_location.py  test_solvers.py  test_trajectories.py  test_trajectory_coverage.py  test_utils.py
trajectory/: index.html
